[Fleet] Introduce simplified package policies API
