# x-pack/plugins/fleet/common/openapi/bundled.yaml
@@ -1921,6 +1921,100 @@ paths:
             type: boolean
           name: force
           in: query
+  /simplified_package_policies:
+    post:
+      summary: Simplified Package policy - Create
+      operationId: create-simplified-package-policy
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  item:
+                    $ref: '#/components/schemas/package_policy'
+                required:
+                  - item
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                id:
+                  type: string
+                  description: Package policy unique identifier
+                name:
+                  type: string
+                  description: Package policy name (should be unique)
+                namespace:
+                  type: string
+                  description: namespace by default "default"
+                policy_id:
+                  type: string
+                  description: Agent policy ID where that package policy will be added
+                package:
+                  type: object
+                  properties:
+                    name:
+                      type: string
+                      description: Package name
+                    version:
+                      type: string
+                      description: Package version
+                  required:
+                    - name
+                    - version
+                vars:
+                  type: object
+                  description: >-
+                    Package root level variable (see integration documentation
+                    for more information)
+                inputs:
+                  type: object
+                  description: >-
+                    Package policy inputs (see integration documentation to know
+                    what inputs are available)
+                  additionalProperties:
+                    type: object
+                    properties:
+                      enabled:
+                        type: boolean
+                        description: enable or disable that input, (default to true)
+                      vars:
+                        type: object
+                        description: >-
+                          Input level variable (see integration documentation
+                          for more information)
+                      streams:
+                        type: object
+                        description: >-
+                          Input streams (see integration documentation to know
+                          what streams are available)
+                        additionalProperties:
+                          type: object
+                          properties:
+                            enabled:
+                              type: boolean
+                              description: enable or disable that stream, (default to true)
+                            vars:
+                              type: object
+                              description: >-
+                                Stream level variable (see integration
+                                documentation for more information)
+                force:
+                  type: boolean
+                  description: >-
+                    Force package policy creation even if package is not
+                    verified, or if the agent policy is managed.
+              required:
+                - name
+                - policy_id
+                - package
+      parameters:
+        - $ref: '#/components/parameters/kbn_xsrf'
   /outputs:
     get:
       summary: Outputs
