# x-pack/plugins/fleet/server/types/rest_spec/package_policy.ts
@@ -32,6 +32,46 @@ export const CreatePackagePolicyRequestSchema = {
   body: CreatePackagePolicyRequestBodySchema,
 };
 
+const SimplifiedVarsSchema = schema.recordOf(
+  schema.string(),
+  schema.oneOf([
+    schema.boolean(),
+    schema.string(),
+    schema.number(),
+    schema.arrayOf(schema.string()),
+    schema.arrayOf(schema.number()),
+  ])
+);
+
+export const CreateSimplifiedPackagePolicyRequestSchema = {
+  body: schema.object({
+    id: schema.maybe(schema.string()),
+    name: schema.string(),
+    policy_id: schema.string(),
+    namespace: schema.string({ defaultValue: 'default' }),
+    package: schema.object({
+      name: schema.string(),
+      version: schema.string(),
+    }),
+    force: schema.maybe(schema.boolean()),
+    vars: SimplifiedVarsSchema,
+    inputs: schema.recordOf(
+      schema.string(),
+      schema.object({
+        enabled: schema.maybe(schema.boolean()),
+        vars: SimplifiedVarsSchema,
+        streams: schema.recordOf(
+          schema.string(),
+          schema.object({
+            enabled: schema.maybe(schema.boolean()),
+            vars: SimplifiedVarsSchema,
+          })
+        ),
+      })
+    ),
+  }),
+};
+
 export const UpdatePackagePolicyRequestSchema = {
   ...GetOnePackagePolicyRequestSchema,
   body: UpdatePackagePolicyRequestBodySchema,
